# sd-jwt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: decoding.rs  decoy.rs  disclosure.rs  disclosure_path.rs  encoding.rs  error.rs  header.rs  holder.rs  issuer.rs  jwk.rs  lib.rs  parser.rs  registries.rs  test_utils.rs  utils.rs  validation.rs  verifier.rs
src/algorithm/: algorithm.rs  algorithms.rs  hashalgorithm.rs  mod.rs
tests/: common.rs  encoding_decoding_test.rs
