[package]
name = "sdjwt"
version = "0.7.1"
authors = ["Rob Sliwa <robjsliwa@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "SD-JWT support for Issuers, Holders, and Verifiers"
homepage = "https://github.com/robjsliwa/sd-jwt"
repository = "https://github.com/robjsliwa/sd-jwt"
keywords = ["sd-jwt", "sdjwt", "token", "sd_jwt"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.51"
rand = "0.8.5"
base64 = "0.21.5"
sha2 = "0.10.8"
chrono = "0.4.31"
rsa = "0.8"
getrandom = { version = "0.2.12", features = ["js"] }

jsonwebtoken-rustcrypto = { git = "https://github.com/JadedBlueEyes/jsonwebtoken", rev = "a7758b0", optional = true }
serde_plain = { version = "1.0.2", optional = true }

jsonwebtoken = { version = "9.2.0", optional = true }

[features]
default = ["ring"]
ring = ["jsonwebtoken"]
noring = ["jsonwebtoken-rustcrypto", "serde_plain"]

[dev-dependencies]
