[package]
name = "sdjwt"
version = "0.8.1"
authors = ["Rob Sliwa <robjsliwa@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "SD-JWT support for Issuers, Holders, and Verifiers"
homepage = "https://github.com/robjsliwa/sd-jwt"
repository = "https://github.com/robjsliwa/sd-jwt"
keywords = ["sd-jwt", "sdjwt", "token", "sd_jwt"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.30"
thiserror = "1.0.51"
rand = "0.8.5"
base64 = "0.21.5"
chrono = "0.4.31"
sha2 = "0.10.8"
jwt-rustcrypto = { path = "../jwt-rustcrypto" }
rsa = "0.9.6"
wasm-bindgen = "0.2.95"
serde-wasm-bindgen = "0.6.5"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

